# mod_smtp

./: CMakeLists.txt  README.md
Projects/: CMakeLists.txt
Projects/mod_smtp/: CMakeLists.txt  Main.cpp
Projects/smtp-client/: CMakeLists.txt
Projects/smtp-client/src/: smtp.h
